# Video_Add_Dubbing_API

./: .gitignore  Dockerfile  README.FOR_DEVELOPER.md  README.en-US.md  README.md  docker-compose.yml  pyproject.toml  redis.conf
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: dubbing.py  health.py  optimize.py  pipline.py  result.py  status.py
app/core/: config.py  database.py  div_llm_cfg.json  emotion_llm_cfg.json  exceptions.py  logging.py  reduce_llm_cfg.json  topic_llm_cfg.json  translate_llm_cfg.json
app/models/: domain.py  schemas.py
app/services/: pipeline.py
app/services/audio/: mixer.py  replacer.py  separator.py
app/services/pipeline/: __init__.py  base.py  dubbing.py  pipeline_stages.yml  registry.py
app/services/pipeline/stages/: __init__.py  analyze_video.py  build_subtitles_data.py  burn_subtitles.py  complete.py  emotion_analysis.py  generate_subtitles.py  mix_audio.py  prepare.py  reduce_text.py  (+6 more)
app/services/pipeline_stages/: __init__.py  base.py  implementations.py  registry.py
app/services/subtitle/: burner.py  generator.py
app/services/timing/: speed_ratio.py
app/services/transcription/: assemblyai_client.py
app/services/translation/: llm_base.py  llm_div.py  llm_emotionor.py  llm_reducer.py  llm_title.py  llm_topic.py  llm_translator.py
app/services/tts/: volcano_tts.py  volcano_tts_v2.py
app/services/video/: cutter.py
app/tasks/: backend.py  worker.py
app/utils/: audio_utils.py  cmd_runner.py  file_manager.py  redis_oper.py  sensitive_filter.py  time_utils.py
scripts/: clean_temp.sh  start.sh
(+5 files in other folders)
